...
        
        if currentQuestionIndex == questionsAmount - 1 {
            let text = makeResultsMessage()
            let resultModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз"
            )
            viewController?.show(quiz: resultModel)
        } else {
            viewController?.showLoadingIndicator()
            currentQuestionIndex += 1
            questionFactory?.requestNextQuestion()
...
